[tool.poetry]
name = "gcsb-viz"
version = "0.1.0"
description = ""
authors = ["ryoherisson <ryhizw@gmail.com>"]
readme = "README.md"
packages = [{include = "gcsb_viz"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
